# sollar

./: .gitignore  .travis.yml  Audio_Manager.h  Colisao.h  Collision.h  Display_Manager.h  Explosao.h  Explosion.h  Game.h  Game_Ship_Main.c  GerenciadorAudio.h  GerenciadorGrafico.h  Makefile  Makefile.am  Makefile.in  Meteor.h  Meteoro.h  Nave.h  README.md  Ship.h  Shots.h  SolarUtil.h  Solar_Utilities.h  Tiros.h  configure  configure.ac  exec  glm.c  glm.h  jogoNaveMain.c  logger.c  logger.h
CUnit-2.1-3/: Jamrules  cunit.pc
CUnit-2.1-3/CUnit/Sources/.libs/: libcunit.lai
data/aviao/: jato.mtl
data/explosao/: explosao.mtl  explosao.tga
data/fundo/: fundo.tga
data/gameover/: continuarVerde.tga  continuarVermelho.tga  fimJogoVerde.tga  fimJogoVermelho.tga  gameover.tga
data/meteoro/: meteoro.mtl  meteoro_Sphere.tga
data/tiro/: tiro.mtl  tiro_Cube.tga
src/: Audio_Manager.h  Collision.h  Display_Manager.h  Explosion.h  Game.h  Makefile.am  Makefile.in  Meteor.h  Ship.h  Shots.h  Solar_Utilities.h  glm.h  logger.c  sollar.c
tests/: Makefile.am  Test_Audio_Manager.c  Test_Explosion.c  Test_Meteor.c  Test_Shots.c
